[package]
name = "sak_rs"
version = "0.1.1"
edition = "2024"

[features]
all = [
    "os",
    "os_windows",
    "os_windows_input",
    "sync",
    "cell",
    "collections",
    "collections_adapter",
    "async",
    "thread",
    "message_dialog",
    "graceful_run",
]

os = []
os_windows = ["os", "dep:windows"]
os_windows_input = [
    "os_windows",
    "sync",
    "windows/Win32_Foundation",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_Devices_HumanInterfaceDevice",
    "windows/Win32_System_LibraryLoader",
    "windows/Win32_UI_Input_KeyboardAndMouse",
    "windows/Win32_UI_WindowsAndMessaging",
]

sync = ["dep:parking_lot"]

cell = []

collections = []
collections_adapter = ["collections"]

async = ["sync", "thread"]

thread = [
    "async",
    "dep:tinyrand",
    "dep:crossbeam-channel",
    "crossbeam-channel/std",
]

message_dialog = ["dep:rfd"]

graceful_run = ["message_dialog"]

[dependencies]
windows = { version = "0.61.3", default-features = false, optional = true }
parking_lot = { version = "0.12.4", default-features = false, optional = true }
crossbeam-channel = { version = "0.5.15", default-features = false, optional = true }
rfd = { version = "0.15.3", default-features = false, optional = true }
tinyrand = { version = "0.5.0", default-features = false, optional = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
option_map_unit_fn = "allow"
unwrap_used = "warn"
