[package]
name = "sak_rs"
version = "0.1.6"
edition = "2024"

[features]
all = [
    "os",
    "os_windows",
    "os_windows_input",
    "sync",
    "cell",
    "collections",
    "collections_adapter",
    "async",
    "thread",
    "thread_async",
    "message_dialog",
    "graceful_run",
    "graphics",
    "graphics_renderer",
    "graphics_renderer_vulkan",
    "font",
]

os = []
os_windows = ["os", "dep:windows"]
os_windows_input = [
    "os_windows",
    "sync",
    "windows/Win32_Foundation",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_Devices_HumanInterfaceDevice",
    "windows/Win32_System_LibraryLoader",
    "windows/Win32_UI_Input_KeyboardAndMouse",
    "windows/Win32_UI_WindowsAndMessaging",
]

sync = ["dep:parking_lot"]

cell = []

collections = []
collections_adapter = ["collections"]

async = ["sync", "thread"]

thread = ["sync", "dep:crossbeam-channel", "crossbeam-channel/std"]
thread_async = ["thread", "async", "dep:tinyrand"]

message_dialog = ["dep:rfd"]

graceful_run = ["message_dialog"]

graphics = []
graphics_renderer = ["graphics"]
graphics_renderer_vulkan = ["graphics_renderer", "thread", "dep:vulkano", "dep:raw-window-handle"]

font = [
    "dep:font-kit",
    "font-kit/source",
    "dep:owned_ttf_parser",
    "owned_ttf_parser/std",
    "dep:fontdue",
    "fontdue/hashbrown",
    "fontdue/simd",
    "dep:thiserror",
]

[dependencies]
windows = { version = "0.61.3", default-features = false, optional = true }
parking_lot = { version = "0.12.4", default-features = false, optional = true }
crossbeam-channel = { version = "0.5.15", default-features = false, optional = true }
rfd = { version = "0.15.4", default-features = false, optional = true }
tinyrand = { version = "0.5.0", default-features = false, optional = true }
vulkano = { version = "0.35.1", default-features = false, optional = true }
raw-window-handle = { version = "0.6.2", default-features = false, optional = true }
font-kit = { version = "0.14.3", default-features = false, optional = true }
owned_ttf_parser = { version = "0.25.0", default-features = false, optional = true }
fontdue = { version = "0.9.3", default-features = false, optional = true }
thiserror = { version = "2.0.12", default-features = false, optional = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
option_map_unit_fn = "allow"
unwrap_used = "warn"
